Increased the gap of top cursor assist line for unit tests to prevent drag selection clicking it by mistake.

--- a/Tests/Web/test.css
+++ b/Tests/Web/test.css
@@ -190,3 +190,8 @@ h1,h2,h3,h4,h5,h6 {
     -ms-transition-duration: 0s !important;
     -webkit-transition-duration: 0s !important;
 }
+
+.ViperCursorAssistPlugin.insertBefore {
+    margin-top: -20px !important;
+}
+
